--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
                     <a href="index.html" class="active"> Home </a>
                 </li>
                 <li>
-                    <a href="about.html"> About Me </a>
+                    <a href="index.html"> About Me </a>
+                </li>
+                <li>
+                    <a href="publications.html"> Publications </a>
                 </li>
                 <li>
                     <a href="projects.html"> Projects </a>
                 </li>
                 <li>
-                    <a href="writing.html"> Writing </a>
+                    <a href="outreach.html"> Contact </a>
                 </li>
             </ul>
         </nav>
@@ -35,7 +38,13 @@
 
             <article>
                 <h2 class="subtitle">About</h2>
-                I am a third year biostatistics Ph.D student in the Department of Preventive Medicine at Keck.
+                <p>
+                    My name is Yue Tu (涂悦).  I am a third year Biostatistics Ph.D student in the Department of Population and <a  href="https://pphs.usc.edu/">Public Health Sciences at Keck School of Medicine</a> at the <a href="https://www.usc.edu">
+                        University of Southern California. 
+                     </a>
+                     I am currently interested in clinical trials (mid and late phase), the application of Bayesian statistics, and biomarker analysis.
+                </p>
+   
 
             </article>
             </div>
