--- a/outreach.html
+++ b/outreach.html
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <div>
-            Please feel free to reach out to me at yuetu AT usc.edu!
+            Please feel free to reach out to me at yuetu AT usc.edu. You can also connect with me on <a href="https://www.linkedin.com/in/yue-paddy-tu-a93a6238/">linkedin</a>
         </div>
 
     </body>
