--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,30 @@
     </head>
 
     <body class="background">
-        
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html" class="active"> Home </a>
+                </li>
+                <li>
+                    <a href="index.html"> About Me </a>
+                </li>
+                <li>
+                    <a href="publications.html"> Publications </a>
+                </li>
+                <li>
+                    <a href="projects.html"> Projects </a>
+                </li>
+                <li>
+                    <a href="outreach.html"> Contact </a>
+                </li>
+            </ul>
+        </nav>
+
+        <article>
+            Coming Soon!
+        </article>
+
     </body>
 
 
