--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="index.html" class="active"> Home </a>
                 </li>
                 <li>
-                    <a href="index.html"> About Me </a>
+                    <a href="about.html"> About Me </a>
                 </li>
                 <li>
                     <a href="publications.html"> Publications </a>
