--- a/about.html
+++ b/about.html
@@ -45,6 +45,8 @@
              </p>
              
              <p>In my spare time, I might be found catching up on anime, playing with my dog Toast, reading, or rapping.</p>
+
+             <p> My CV can be found <a href="cv.pdf"> here</a></p>
             </p>
         </article>
 
