--- a/outreach.html
+++ b/outreach.html
@@ -32,9 +32,11 @@
                 </li>
             </ul>
         </nav>
-        <div>
-            Please feel free to reach out to me at yuetu AT usc.edu. You can also connect with me on <a href="https://www.linkedin.com/in/yue-paddy-tu-a93a6238/">linkedin</a>
-        </div>
+        <article class="about-article">
+            <p>
+                Please feel free to reach out to me at yuetu AT usc.edu. You can also connect with me on <a href="https://www.linkedin.com/in/yue-paddy-tu-a93a6238/">linkedin</a>
+            </p>
+        </article>
 
     </body>
 
