--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
                     <a href="index.html" class="active"> Home </a>
                 </li>
                 <li>
-                    <a href="about.html"> About Me </a>
+                    <a href="research.html"> Research  </a>
                 </li>
                 <li>
-                    <a href="publications.html"> Publications </a>
+                    <a href="experience.html"> Professional Experience </a>
                 </li>
                 <li>
-                    <a href="projects.html"> Projects </a>
-                </li>
-                <li>
-                    <a href="outreach.html"> Contact </a>
+                    <a href="outreach.html"> Personal </a>
                 </li>
             </ul>
         </nav>
