--- a/outreach.html
+++ b/outreach.html
@@ -14,21 +14,18 @@
 
     <body class="background">
         <nav>
-            <ul>
+            <ul class="nav-list">
                 <li>
                     <a href="index.html" class="active"> Home </a>
                 </li>
                 <li>
-                    <a href="index.html"> About Me </a>
+                    <a href="research.html"> Research  </a>
                 </li>
                 <li>
-                    <a href="publications.html"> Publications </a>
+                    <a href="experience.html"> Professional Experience </a>
                 </li>
                 <li>
-                    <a href="projects.html"> Projects </a>
-                </li>
-                <li>
-                    <a href="outreach.html"> Contact </a>
+                    <a href="outreach.html"> Personal </a>
                 </li>
             </ul>
         </nav>
