add contact info

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
                          <p> My CV can be found <a href="cv_yue.pdf"> here</a></p>
                         </p>
                     </p>
+
+                    <h2 class="subtitle">
+                        Contact
+                    </h2>
+                    <p> <p>
+                        Please feel free to email me: yuetu AT usc.edu. You can also connect with me on <a href="https://www.linkedin.com/in/yue-paddy-tu-a93a6238/">linkedin</a>
+                    </p></p>
     
 
                 </article>
