--- a/outreach.html
+++ b/outreach.html
@@ -31,7 +31,7 @@
         </nav>
         <article class="about-article">
             <p>
-                Please feel free to reach out to me at yuetu AT usc.edu. You can also connect with me on <a href="https://www.linkedin.com/in/yue-paddy-tu-a93a6238/">linkedin</a>
+                Coming soon!
             </p>
         </article>
 
