--- a/experience.html
+++ b/experience.html
@@ -25,13 +25,15 @@
                     <a href="experience.html"> Professional Experience </a>
                 </li>
                 <li>
-                    <a href="outreach.html"> Personal </a>
+                    <a href="personal.html"> Personal </a>
                 </li>
             </ul>
         </nav>
 
         <article>
-            Coming Soon!
+            <p>
+
+            </p>
         </article>
 
     </body>
