--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="experience.html"> Professional Experience </a>
                 </li>
                 <li>
-                    <a href="outreach.html"> Personal </a>
+                    <a href="personal.html"> Personal </a>
                 </li>
             </ul>
         </nav>
@@ -61,7 +61,7 @@
                         Contact
                     </h2>
                     <p> <p>
-                        Please feel free to email me: yuetu AT usc.edu. You can also connect with me on <a href="https://www.linkedin.com/in/yue-paddy-tu-a93a6238/">linkedin</a>
+                        Please feel free to email me: yuetu AT usc.edu. You can also connect with me on <a href="https://www.linkedin.com/in/yue-paddy-tu-a93a6238/">Linkedin</a>
                     </p></p>
     
 
