--- a/personal.html
+++ b/personal.html
@@ -25,7 +25,7 @@
                     <a href="experience.html"> Professional Experience </a>
                 </li>
                 <li>
-                    <a href="outreach.html"> Personal </a>
+                    <a href="personal.html"> Personal </a>
                 </li>
             </ul>
         </nav>
