--- a/research.html
+++ b/research.html
@@ -25,13 +25,48 @@
                     <a href="experience.html"> Professional Experience </a>
                 </li>
                 <li>
-                    <a href="outreach.html"> Personal </a>
+                    <a href="personal.html"> Personal </a>
                 </li>
             </ul>
         </nav>
 
         <article>
-            Coming Soon!
+            <h3>Research Summary</h3>
+            <p>My Ph.D research is in Biostatics. My primary focus is clinical trials, specifically adaptive randomization in biomarker-driven trial design.  
+                The following is a more detailed overview of my research interest and objective.</p>
+            <p>
+                For decades, cancers were traditionally classified by tumor location and staging,
+                and approaches to drug development and clinical trial design mirrored this simplicity. 
+                With the rapid development of gene sequencing techniques, most cancers now have refined classifications 
+                recognizing tumor heterogeneity on a molecular level, and treatment strategies have shifted from eradicating
+                 tumors to interrupting their molecular drivers of growth and spread. Statistical designs for clinical trials, 
+                 however, have struggled to keep pace with continually evolving diagnostic classifications and novel treatment 
+                 strategies, despite their central role in testing therapeutic hypotheses and translating scientific findings 
+                 into clinical practice.  Progress is slowed when tumor biomarkers are collected on a therapeutic study and 
+                 analyzed months or years after completion of a tradition study design, and ethical issues abound when it is learned
+                  (years too late) that only a subset of patients enrolled on a study were benefiting from a marker-targeted therapy.
+                In this new era of clinical cancer research and personalized medicine, where cancers are defined just as much (or moreso) by their molecular features as by their histologic type, 
+                there is an urgent need for novel clinical trial designs that are capable of using emerging information (data) regarding the prognostic and predictive effects of tumor molecular features 
+                to adapt trial endpoints, objectives, and patient accrual while the trial is still ongoing.  
+            </p>
+            <p>
+                The ultimate purpose of my research is to develop novel statistical methodology to support “next generation” clinical trial designs for molecularly targeted cancer therapies. 
+                Within the scope of my PhD thesis, I will address two major weaknesses of currently-employed biomarker-driven design approaches: 
+                (1) simplification or misrepresentation of the prognostic or predictive effects of naturally continuous biomarkers
+                 (e.g., expression levels or circulating tumor DNA) that are driving study design and could therefore lead to incorrect conclusions, and (2) 
+                 fixed rather than adaptive treatment allocation ratios to marker-driven versus control therapy, despite accumulating 
+                 information on-trial that could inform the treatment of enrolling patients on a personalized level. 
+                 In my proposed thesis work, I will combine the machinery of Bayesian statistical theory with immediate access to individual
+                  patient data from Children’s Oncology Group trials to inform development of impactful, clinically intuitive, and ready-to-implement 
+                  trial design solutions to these current challenges. Specifically, I will develop a new statistical theoretical framework for biomarker-driven
+                trial designs in which one or more naturally continuous markers with possibly non-linear or non-monotone effects are of interest to drive adaptive decision-making
+                at interim and final analysis timepoints. These designs will allow for more accurate and precise real-time identification of patient subgroups who are benefiting
+                from an experimental targeted therapy due to their avoidance of standard design manipulations (e.g. marker dichotomization) and assumptions (e.g., effect linearity
+                 or monotonicity). Instead, a flexible Bayesian modeling “engine” will use accumulating patient, molecular, and outcome data to continuously (1) update estimates of 
+                design-driving marker relationships, (2) quantify posterior uncertainty around these effects, and (3) translate the statistical information from (1) and (2) to personalize
+                treatment allocation, such that a newly-enrolled patient’s probability of randomization to experimental therapy is a function of the their tumor marker value(s), the experimental 
+                therapy’s trial performance to date among molecularly similar patients, and the degree of posterior (un)certainty in that performance.  
+            </p>
         </article>
 
     </body>
