--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
 
-        <article class="about-article">
+        <article class="article">
             <p>
                 I'm Yue Tu, currently a Ph.D student in Biostatics studying at the University of Southern California.</p>
             <p>
