--- a/personal.html
+++ b/personal.html
@@ -29,7 +29,7 @@
                 </li>
             </ul>
         </nav>
-        <article class="about-article">
+        <article class="article">
             <p>
                 Coming soon!
             </p>
