--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
 
-        <article>
+        <article class="article">
             <h3>Research Summary</h3>
             <p>My Ph.D research is in Biostatics. My primary focus is clinical trials, specifically adaptive randomization in biomarker-driven trial design.  
                 The following is a more detailed overview of my research interest and objective.</p>
