--- a/research.html
+++ b/research.html
@@ -45,20 +45,13 @@
                  into clinical practice.  Progress is slowed when tumor biomarkers are collected on a therapeutic study and 
                  analyzed months or years after completion of a tradition study design, and ethical issues abound when it is learned
                   (years too late) that only a subset of patients enrolled on a study were benefiting from a marker-targeted therapy.
-                In this new era of clinical cancer research and personalized medicine, where cancers are defined just as much (or moreso) by their molecular features as by their histologic type, 
+                In this new era of clinical cancer research and personalized medicine, where cancers are defined just as much by their molecular features as by their histologic type, 
                 there is an urgent need for novel clinical trial designs that are capable of using emerging information (data) regarding the prognostic and predictive effects of tumor molecular features 
                 to adapt trial endpoints, objectives, and patient accrual while the trial is still ongoing.  
             </p>
             <p>
                 The ultimate purpose of my research is to develop novel statistical methodology to support “next generation” clinical trial designs for molecularly targeted cancer therapies. 
-                Within the scope of my PhD thesis, I will address two major weaknesses of currently-employed biomarker-driven design approaches: 
-                (1) simplification or misrepresentation of the prognostic or predictive effects of naturally continuous biomarkers
-                 (e.g., expression levels or circulating tumor DNA) that are driving study design and could therefore lead to incorrect conclusions, and (2) 
-                 fixed rather than adaptive treatment allocation ratios to marker-driven versus control therapy, despite accumulating 
-                 information on-trial that could inform the treatment of enrolling patients on a personalized level. 
-                 In my proposed thesis work, I will combine the machinery of Bayesian statistical theory with immediate access to individual
-                  patient data from Children’s Oncology Group trials to inform development of impactful, clinically intuitive, and ready-to-implement 
-                  trial design solutions to these current challenges. Specifically, I will develop a new statistical theoretical framework for biomarker-driven
+               Specifically, I will develop a new statistical theoretical framework for biomarker-driven
                 trial designs in which one or more naturally continuous markers with possibly non-linear or non-monotone effects are of interest to drive adaptive decision-making
                 at interim and final analysis timepoints. These designs will allow for more accurate and precise real-time identification of patient subgroups who are benefiting
                 from an experimental targeted therapy due to their avoidance of standard design manipulations (e.g. marker dichotomization) and assumptions (e.g., effect linearity
