--- a/experience.html
+++ b/experience.html
@@ -30,9 +30,18 @@
             </ul>
         </nav>
 
-        <article>
+        <article class="article">
             <p>
-
+                Before coming to USC, I spent a year at a clinical research organinzation where I worked on dynamic monitoring in clinical trials. 
+                I became an adept programmer in R and SAS. I worked on model development and implementation. I was fortunate enough to collaborate with 
+                several researchers, including Peng Zhang, Dr. Tai Xie, Dr. Wei-Chung Shih, Dr. Lan, and Dr. Ping Gao. Through my interactions with them 
+                I became more interested in methodology and trial design. With their encouragement and support, I took the next step forward to pursue a Ph.D in 
+                Biostatistics.   
+            </p>
+            <p>
+                At USC, I am working mainly on my research goal of bringing adaptive randomization into clinical trial design. I am fortunate to be mentored by
+                 <a href="https://keck.usc.edu/faculty-search/lindsay-a-renfro/">Dr. Lindsay Renfro</a>. In my Ph.D training, I've also dived deeper into Bayesian statistics, statistical inference, and computer programming. 
+                Finally, I also have been able to learn about different areas within Biostatistics and increased my general understanding of the subject. 
             </p>
         </article>
 
