--- a/research.html
+++ b/research.html
@@ -44,21 +44,18 @@
                  strategies, despite their central role in testing therapeutic hypotheses and translating scientific findings 
                  into clinical practice.  Progress is slowed when tumor biomarkers are collected on a therapeutic study and 
                  analyzed months or years after completion of a tradition study design, and ethical issues abound when it is learned
-                  (years too late) that only a subset of patients enrolled on a study were benefiting from a marker-targeted therapy.
-                In this new era of clinical cancer research and personalized medicine, where cancers are defined just as much by their molecular features as by their histologic type, 
-                there is an urgent need for novel clinical trial designs that are capable of using emerging information (data) regarding the prognostic and predictive effects of tumor molecular features 
-                to adapt trial endpoints, objectives, and patient accrual while the trial is still ongoing.  
+                  (years too late) that only a subset of patients enrolled on a study were benefiting from a marker-targeted therapy. There is an
+                   urgent need for novel clinical trial designs that are capable of dynamic updates.
             </p>
             <p>
                 The ultimate purpose of my research is to develop novel statistical methodology to support “next generation” clinical trial designs for molecularly targeted cancer therapies. 
                Specifically, I will develop a new statistical theoretical framework for biomarker-driven
                 trial designs in which one or more naturally continuous markers with possibly non-linear or non-monotone effects are of interest to drive adaptive decision-making
                 at interim and final analysis timepoints. These designs will allow for more accurate and precise real-time identification of patient subgroups who are benefiting
-                from an experimental targeted therapy due to their avoidance of standard design manipulations (e.g. marker dichotomization) and assumptions (e.g., effect linearity
-                 or monotonicity). Instead, a flexible Bayesian modeling “engine” will use accumulating patient, molecular, and outcome data to continuously (1) update estimates of 
-                design-driving marker relationships, (2) quantify posterior uncertainty around these effects, and (3) translate the statistical information from (1) and (2) to personalize
-                treatment allocation, such that a newly-enrolled patient’s probability of randomization to experimental therapy is a function of the their tumor marker value(s), the experimental 
-                therapy’s trial performance to date among molecularly similar patients, and the degree of posterior (un)certainty in that performance.  
+                from an experimental targeted therapy due to their avoidance of standard design manipulations  and assumptions (e.g., effect linearity
+                 or monotonicity). Instead, the goal is to create a flexible Bayesian modeling “engine” will use accumulating patient, molecular, and outcome data to continuously update estimates of 
+                design-driving marker relationships, quantify posterior uncertainty around these effects, and translate the statistical information to personalize
+                treatment allocation.
             </p>
         </article>
 
