--- a/personal.html
+++ b/personal.html
@@ -31,7 +31,7 @@
         </nav>
         <article class="article">
             <p>
-                Coming soon!
+                <img src="yuetu.jpg" alt="Yue Tu's headshot"></img> 
             </p>
         </article>
 
