--- a/research.html
+++ b/research.html
@@ -32,24 +32,20 @@
 
         <article class="article">
             <h3>Research Summary</h3>
-            <p>My Ph.D research is in Biostatics. My primary focus is clinical trials, specifically adaptive randomization in biomarker-driven trial design.  
+            <p>My Ph.D research is in Biostatistics. My primary focus is clinical trials, specifically adaptive randomization in biomarker-driven trial design.  
                 The following is a more detailed overview of my research interest and objective.</p>
-            <p>
-                For decades, cancers were traditionally classified by tumor location and staging,
-                and approaches to drug development and clinical trial design mirrored this simplicity. 
+            <p> 
                 With the rapid development of gene sequencing techniques, most cancers now have refined classifications 
                 recognizing tumor heterogeneity on a molecular level, and treatment strategies have shifted from eradicating
                  tumors to interrupting their molecular drivers of growth and spread. Statistical designs for clinical trials, 
                  however, have struggled to keep pace with continually evolving diagnostic classifications and novel treatment 
                  strategies, despite their central role in testing therapeutic hypotheses and translating scientific findings 
-                 into clinical practice.  Progress is slowed when tumor biomarkers are collected on a therapeutic study and 
-                 analyzed months or years after completion of a tradition study design, and ethical issues abound when it is learned
-                  (years too late) that only a subset of patients enrolled on a study were benefiting from a marker-targeted therapy. There is an
-                   urgent need for novel clinical trial designs that are capable of dynamic updates.
+                 into clinical practice. There is an urgent need for novel clinical trial designs that are capable using emerging information (data) 
+                 regarding the prognostic and predictive effects of tumor molecular features to adapt trial endpoints, objectives, and patient accrual while the trial is still ongoing.
             </p>
             <p>
                 The ultimate purpose of my research is to develop novel statistical methodology to support “next generation” clinical trial designs for molecularly targeted cancer therapies. 
-               Specifically, I will develop a new statistical theoretical framework for biomarker-driven
+                Specifically, I will develop a new statistical theoretical framework for biomarker-driven
                 trial designs in which one or more naturally continuous markers with possibly non-linear or non-monotone effects are of interest to drive adaptive decision-making
                 at interim and final analysis timepoints. These designs will allow for more accurate and precise real-time identification of patient subgroups who are benefiting
                 from an experimental targeted therapy due to their avoidance of standard design manipulations  and assumptions (e.g., effect linearity
@@ -57,6 +53,25 @@
                 design-driving marker relationships, quantify posterior uncertainty around these effects, and translate the statistical information to personalize
                 treatment allocation.
             </p>
+
+            <h3>Publications</h3>
+            <ul>
+                <li> Xie T, Zhang P, Shih WJ, <b>Tu Y </b>, Lan KK.(2021): <i>Dynamic Monitoring of Ongoing Clinical Trials</i>, Stat Biopharm Res,
+                    <a href="https://www.tandfonline.com/doi/full/10.1080/19466315.2021.1880965">DOI: 10.1080/19466315.2021.1880965</a> </li>
+            </ul>
+            <h3>Presentations</h3>
+            <ul>
+                <li><b>Tu Y </b><i>Biomarker Clinical Trial Design for Cancer Therapy</i> Seminar in Biostatistics and Epideminology.
+                Keck School of Medicine of USC. Online. 2020</li>
+                <li><b>Tu Y </b><i>Efficiency with Trade-Offs and Crossover Design</i> Seminar in Biostatistics and Programming.
+                Brightech International LLC. Somerset, NJ . 2019</li>
+                <li><b>Tu Y </b><i>Overview of Clinical Trial</i> Seminar in Biostatistics and Programming.
+                Brightech International LLC. Somerset, NJ . 2018</li>
+                <li><b>Tu Y </b>, Borkowsky J, Jones C, Yang X <i>Exploring Early Endpoints for Predicting Asthma Exacerbations</i> Seminar in Biometric, Statistical programming and Analysis.
+                Genentech. San Francisco, CA. 2017</li>
+                <li><b>Tu Y </b>, Bo C<i>Introduction to ggplot2</i> Seminar in Biometric, Statistical programming and Analysis.
+                Genentech. San Francisco, CA. 2017</li>
+            </ul>
         </article>
 
     </body>
