--- a/experience.html
+++ b/experience.html
@@ -34,7 +34,7 @@
             <p>
                 Before coming to USC, I spent a year at a clinical research organinzation where I worked on dynamic monitoring in clinical trials. 
                 I became an adept programmer in R and SAS. I worked on model development and implementation. I was fortunate enough to collaborate with 
-                several researchers, including Peng Zhang, Dr. Tai Xie, Dr. Wei-Chung Shih, Dr. Lan, and Dr. Ping Gao. Through my interactions with them 
+                several researchers, including Peng Zhang, Dr. Tai Xie, Dr. Wei-Chung Shih, Dr. K.K Gordon Lan, and Dr. Ping Gao. Through my interactions with them 
                 I became more interested in methodology and trial design. With their encouragement and support, I took the next step forward to pursue a Ph.D in 
                 Biostatistics.   
             </p>
@@ -43,6 +43,12 @@
                  <a href="https://keck.usc.edu/faculty-search/lindsay-a-renfro/">Dr. Lindsay Renfro</a>. In my Ph.D training, I've also dived deeper into Bayesian statistics, statistical inference, and computer programming. 
                 Finally, I also have been able to learn about different areas within Biostatistics and increased my general understanding of the subject. 
             </p>
+
+            <h3>Teaching Experience</h3>
+            <ul>
+                <li> <b>P6104 - Introduction to Biostatistics</b> <i>Department of Biostatistics, 
+                    Mailman School of Public Health, Columbia University</i> </li>
+            </ul>
         </article>
 
     </body>
