--- a/personal.html
+++ b/personal.html
@@ -31,8 +31,8 @@
         </nav>
         <article class="article">
             <p>
-                
-                <img src="yuetu.jpg" alt="Yue Tu's headshot"></img> 
+
+                <img src="sleeping_toast.jpg" alt="sleeping dog"></img> 
             </p>
         </article>
 
