--- a/research.html
+++ b/research.html
@@ -61,15 +61,15 @@
             </ul>
             <h3>Presentations</h3>
             <ul>
-                <li><b>Tu Y </b><i>Biomarker Clinical Trial Design for Cancer Therapy</i> Seminar in Biostatistics and Epideminology.
+                <li><b>Tu Y</b> <i>Biomarker Clinical Trial Design for Cancer Therapy</i>, Seminar in Biostatistics and Epideminology.
                 Keck School of Medicine of USC. Online. 2020</li>
-                <li><b>Tu Y </b><i>Efficiency with Trade-Offs and Crossover Design</i> Seminar in Biostatistics and Programming.
+                <li><b>Tu Y</b> <i>Efficiency with Trade-Offs and Crossover Design</i>, Seminar in Biostatistics and Programming.
                 Brightech International LLC. Somerset, NJ . 2019</li>
-                <li><b>Tu Y </b><i>Overview of Clinical Trial</i> Seminar in Biostatistics and Programming.
+                <li><b>Tu Y</b>, <i>Overview of Clinical Trial</i>, Seminar in Biostatistics and Programming.
                 Brightech International LLC. Somerset, NJ . 2018</li>
-                <li><b>Tu Y </b>, Borkowsky J, Jones C, Yang X <i>Exploring Early Endpoints for Predicting Asthma Exacerbations</i> Seminar in Biometric, Statistical programming and Analysis.
+                <li><b>Tu Y</b>, Borkowsky J, Jones C, Yang X <i>Exploring Early Endpoints for Predicting Asthma Exacerbations</i>, Seminar in Biometric, Statistical programming and Analysis.
                 Genentech. San Francisco, CA. 2017</li>
-                <li><b>Tu Y </b>, Bo C<i>Introduction to ggplot2</i> Seminar in Biometric, Statistical programming and Analysis.
+                <li><b>Tu Y</b>, Bo C <i>Introduction to ggplot2</i>, Seminar in Biometric, Statistical programming and Analysis.
                 Genentech. San Francisco, CA. 2017</li>
             </ul>
         </article>
