--- a/personal.html
+++ b/personal.html
@@ -30,8 +30,8 @@
             </ul>
         </nav>
         <article class="article">
-            <p>
-                Some pictures of my dog, Toast. He is a Welsh Pembroke Corgi.
+            <p class="indent">
+                Just sharing some fun stuff! From left to right: hiking Potato Chip in San Diego, hanging out with my partner, and running a 10k in New Jersey.
             </p>
             <div class="image-container">
                  <figure class="figure">
@@ -41,12 +41,12 @@
                     <img class="image" src="together.jpg" alt="standing dog"></img> 
                 </figure>
                 <figure class="figure">
-                    <img class="image" src="toast_eating.jpg" alt="dog eating"></img> 
+                    <img class="image" src="running.jpg" alt="dog eating"></img> 
                 </figure>
                 
             </div>
-            <p>
-                Some pictures of my dog, Toast. He is a Welsh Pembroke Corgi.
+            <p class="indent">
+                Here are some pictures of my dog, Toast. He is a Welsh Pembroke Corgi who tries  his best to be well-behaved!
             </p>
             <div class="image-container">
                  <figure class="figure">
