update open new windows

--- a/experience.html
+++ b/experience.html
@@ -40,7 +40,7 @@
             </p>
             <p>
                 At USC, I am working mainly on my research goal of bringing adaptive randomization into clinical trial design. I am fortunate to be mentored by
-                 <a href="https://keck.usc.edu/faculty-search/lindsay-a-renfro/">Dr. Lindsay Renfro</a>. In my Ph.D training, I've also dived deeper into Bayesian statistics, statistical inference, and computer programming. 
+                 <a href="https://keck.usc.edu/faculty-search/lindsay-a-renfro/" target="_blank" rel="noopener noreferrer">Dr. Lindsay Renfro</a>. In my Ph.D training, I've also dived deeper into Bayesian statistics, statistical inference, and computer programming. 
                 Finally, I also have been able to learn about different areas within Biostatistics and increased my general understanding of the subject. 
             </p>
 
