--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <article>
                     <h2 class="subtitle">About</h2>
                     <p>
-                        My name is Yue Tu (涂悦).  I am a third year Biostatistics Ph.D student in the Department of Population and <a  href="https://pphs.usc.edu/">Public Health Sciences at Keck School of Medicine</a> at the <a href="https://www.usc.edu">
-                            University of Southern California. 
+                        My name is Yue Tu (涂悦).  I am a third year Biostatistics Ph.D student in the Department of Population and <a  href="https://pphs.usc.edu/"  target="_blank" rel="noopener noreferrer">Public Health Sciences at Keck School of Medicine</a> at 
+                        the <a href="https://www.usc.edu"  target="_blank" rel="noopener noreferrer">  University of Southern California. 
                         </a>
                         I am currently interested in clinical trials (mid and late phase), the application of Bayesian statistics, and biomarker analysis.</p>
                         <p>
@@ -61,7 +61,7 @@
                         Contact
                     </h2>
                     <p> <p>
-                        Please feel free to email me: yuetu AT usc.edu. You can also connect with me on <a href="https://www.linkedin.com/in/yue-paddy-tu-a93a6238/">Linkedin</a>
+                        Please feel free to email me: yuetu AT usc.edu. You can also connect with me on <a href="https://www.linkedin.com/in/yue-paddy-tu-a93a6238/"  target="_blank" rel="noopener noreferrer">Linkedin</a>
                     </p></p>
     
 
