--- a/personal.html
+++ b/personal.html
@@ -31,7 +31,7 @@
         </nav>
         <article class="article">
             <p class="indent">
-                Just sharing some fun stuff! From left to right: hiking Potato Chip in San Diego, hanging out with my partner, and running a 10k in New Jersey.
+                Just sharing some fun stuff! From left to right: hiking Potato Chip in San Diego, hanging out with my partner, and running a 10k in New York.
             </p>
             <div class="image-container">
                  <figure class="figure">
