--- a/research.html
+++ b/research.html
@@ -57,16 +57,16 @@
             <h3>Publications</h3>
             <ul>
                 <li> Xie T, Zhang P, Shih WJ, <b>Tu Y </b>, Lan KK.(2021): <i>Dynamic Monitoring of Ongoing Clinical Trials</i>, Stat Biopharm Res,
-                    <a href="https://www.tandfonline.com/doi/full/10.1080/19466315.2021.1880965">DOI: 10.1080/19466315.2021.1880965</a> </li>
+                    <a href="https://www.tandfonline.com/doi/full/10.1080/19466315.2021.1880965"  target="_blank" rel="noopener noreferrer">DOI: 10.1080/19466315.2021.1880965</a> </li>
             </ul>
             <h3>Presentations</h3>
             <ul>
-                <li><b>Tu Y</b> <i>Biomarker Clinical Trial Design for Cancer Therapy</i>, Seminar in Biostatistics and Epideminology.
+                <li><b>Tu Y</b>, <i>Biomarker Clinical Trial Design for Cancer Therapy</i>, Seminar in Biostatistics and Epidemiology.
                 Keck School of Medicine of USC. Online. 2020</li>
-                <li><b>Tu Y</b> <i>Efficiency with Trade-Offs and Crossover Design</i>, Seminar in Biostatistics and Programming.
-                Brightech International LLC. Somerset, NJ . 2019</li>
+                <li><b>Tu Y</b>, <i>Efficiency with Trade-Offs and Crossover Design</i>, Seminar in Biostatistics and Programming.
+                Brightech International LLC. Somerset, NJ. 2019</li>
                 <li><b>Tu Y</b>, <i>Overview of Clinical Trial</i>, Seminar in Biostatistics and Programming.
-                Brightech International LLC. Somerset, NJ . 2018</li>
+                Brightech International LLC. Somerset, NJ. 2018</li>
                 <li><b>Tu Y</b>, Borkowsky J, Jones C, Yang X <i>Exploring Early Endpoints for Predicting Asthma Exacerbations</i>, Seminar in Biometric, Statistical programming and Analysis.
                 Genentech. San Francisco, CA. 2017</li>
                 <li><b>Tu Y</b>, Bo C <i>Introduction to ggplot2</i>, Seminar in Biometric, Statistical programming and Analysis.
