--- a/experience.html
+++ b/experience.html
@@ -30,15 +30,16 @@
             </ul>
         </nav>
 
-        <article class="article">
-            <p>
+        <article>
+            <h3>Experience</h3>
+            <p class="paragraph">
                 Before coming to USC, I spent a year at a clinical research organinzation where I worked on dynamic monitoring in clinical trials. 
                 I became an adept programmer in R and SAS. I worked on model development and implementation. I was fortunate enough to collaborate with 
                 several researchers, including Peng Zhang, Dr. Tai Xie, Dr. Wei-Chung Shih, Dr. K.K Gordon Lan, and Dr. Ping Gao. Through my interactions with them 
                 I became more interested in methodology and trial design. With their encouragement and support, I took the next step forward to pursue a Ph.D in 
                 Biostatistics.   
             </p>
-            <p>
+            <p class="paragraph">
                 At USC, I am working mainly on my research goal of bringing adaptive randomization into clinical trial design. I am fortunate to be mentored by
                  <a href="https://keck.usc.edu/faculty-search/lindsay-a-renfro/" target="_blank" rel="noopener noreferrer">Dr. Lindsay Renfro</a>. In my Ph.D training, I've also dived deeper into Bayesian statistics, statistical inference, and computer programming. 
                 Finally, I also have been able to learn about different areas within Biostatistics and increased my general understanding of the subject. 
@@ -50,6 +51,9 @@
                     Mailman School of Public Health, Columbia University</i> </li>
             </ul>
         </article>
+        <footer>
+            <p>Yue Tu,  2021</p>
+        </footer>
 
     </body>
 
