--- a/personal.html
+++ b/personal.html
@@ -29,7 +29,8 @@
                 </li>
             </ul>
         </nav>
-        <article class="article">
+        <article>
+            <h3>Personal</h3>
             <p class="indent">
                 Just sharing some fun stuff! From left to right: hiking Potato Chip in San Diego, hanging out with my partner, and running a 10k in New York.
             </p>
