--- a/research.html
+++ b/research.html
@@ -30,11 +30,11 @@
             </ul>
         </nav>
 
-        <article class="article">
+        <article>
             <h3>Research Summary</h3>
-            <p>My Ph.D research is in Biostatistics. My primary focus is clinical trials, specifically adaptive randomization in biomarker-driven trial design.  
+            <p class="paragraph">My Ph.D research is in Biostatistics. My primary focus is clinical trials, specifically adaptive randomization in biomarker-driven trial design.  
                 The following is a more detailed overview of my research interest and objective.</p>
-            <p> 
+            <p class="paragraph"> 
                 With the rapid development of gene sequencing techniques, most cancers now have refined classifications 
                 recognizing tumor heterogeneity on a molecular level, and treatment strategies have shifted from eradicating
                  tumors to interrupting their molecular drivers of growth and spread. Statistical designs for clinical trials, 
@@ -43,7 +43,7 @@
                  into clinical practice. There is an urgent need for novel clinical trial designs that are capable using emerging information (data) 
                  regarding the prognostic and predictive effects of tumor molecular features to adapt trial endpoints, objectives, and patient accrual while the trial is still ongoing.
             </p>
-            <p>
+            <p class="paragraph">
                 The ultimate purpose of my research is to develop novel statistical methodology to support “next generation” clinical trial designs for molecularly targeted cancer therapies. 
                 Specifically, I will develop a new statistical theoretical framework for biomarker-driven
                 trial designs in which one or more naturally continuous markers with possibly non-linear or non-monotone effects are of interest to drive adaptive decision-making
@@ -74,6 +74,9 @@
             </ul>
         </article>
 
+        <footer>
+            <p>Yue Tu,  2021</p>
+        </footer>
     </body>
 
 
