--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
                 <article>
                     <h2 class="subtitle">About</h2>
-                    <p>
+                    <p class="paragraph">
                         My name is Yue Tu (涂悦).  I am a third year Biostatistics Ph.D student in the <a  href="https://pphs.usc.edu/"  target="_blank" rel="noopener noreferrer">Department of Population and Public Health Sciences at Keck School of Medicine</a> at 
                         the <a href="https://www.usc.edu"  target="_blank" rel="noopener noreferrer">  University of Southern California </a>. 
                         I am currently interested in clinical trials (mid and late phase), the application of Bayesian statistics, and biomarker analysis.</p>
