--- a/experience.html
+++ b/experience.html
@@ -49,6 +49,20 @@
                 <li> <b>P6104 - Introduction to Biostatistics</b> <i>Department of Biostatistics, 
                     Mailman School of Public Health, Columbia University</i> </li>
             </ul>
+
+            <h3>Working Experience</h3>
+            <ul>
+                <li> <b>Brightech International, LLC/CIMS Global</b> <i>SAS and R Programmer</i> </li>
+                <li> <b>Genentech</b> <i>Statistical Programming Analysis - Data Analytics Intern</i> </li>
+            </ul>
+
+            <h3>Relevant Courses</h3>
+            <ul>
+                <li> Advanced Statistical Computing, Algorithms, Statistical Methods in Clinical Trial, 
+                    Theory of Statistics, High-Dimensional Data Analysis, Design of Clinical Studies, Machine Learning, Design of Medical Experiments, 
+                    Survival Analysis, Longitudinal Analysis, Pharmaceutical Statistics, Linear Regression, Inference, Categorical Data Analysis, 
+                    Probability, Generalized Linear Models, Linear Algebra, Calculus of Several Variables, Statistical Programming with R </li>
+            </ul>
         </article>
 
     </body>
