--- a/research.html
+++ b/research.html
@@ -54,10 +54,20 @@
                 treatment allocation.
             </p>
 
+            <h3>Research Projects</h3>
+            <ul>
+                <li> <b>Bayesian Biomarker-Adaptive Clinical Trial Design Algorithms for Personalized Medicine in Oncology</b> </li>
+                <li> <b>Generalized Adaptive Design for Clinical Trial</li>
+                <li> <b>Exploring Early Endpoints for Predicting Asthma Exacerbations</li>
+                
+            </ul>
+
+
             <h3>Publications</h3>
             <ul>
                 <li> Xie T, Zhang P, Shih WJ, <b>Tu Y </b>, Lan KK.(2021): <i>Dynamic Monitoring of Ongoing Clinical Trials</i>, Stat Biopharm Res,
                     <a href="https://www.tandfonline.com/doi/full/10.1080/19466315.2021.1880965"  target="_blank" rel="noopener noreferrer">DOI: 10.1080/19466315.2021.1880965</a> </li>
+                 <li>  <b>Tu Y </b>, Renfro L.A.(2021): <i>Biomarker-Driven Basket and Enrichment Designs</i>, in preparation.</li>
             </ul>
             <h3>Presentations</h3>
             <ul>
