--- a/experience.html
+++ b/experience.html
@@ -54,8 +54,15 @@
 
             <h3>Working Experience</h3>
             <ul>
+                <li><b>University of Southern California</b><i>Research Assistant</i>></li>>
                 <li> <b>Brightech International, LLC/CIMS Global</b> <i>SAS and R Programmer</i> </li>
                 <li> <b>Genentech</b> <i>Statistical Programming Analysis - Data Analytics Intern</i> </li>
+                <ul>
+                    <li>Explored possibly early endpoint to predict asthma exacerbations using data from 
+                        two identical,randomized, multicenter, placebo-controlled Phase III studies</li>>
+                    <li>The main goal was to evaulate new options to establish Phase II proof of concept and 
+                        impact on overall clinical development timelines</li>>
+                    </ul>>
             </ul>
 
             <h3>Relevant Courses</h3>
