update on experience

--- a/experience.html
+++ b/experience.html
@@ -54,15 +54,28 @@
 
             <h3>Working Experience</h3>
             <ul>
-                <li><b>University of Southern California</b><i>Research Assistant</i>></li>>
+                <li><b>University of Southern California</b><i>Research Assistant</i></li>
+                <ul>
+                    <li>Working on thesis topic on Bayesian biomarker-adaptive clinical trial design algorithms for personalized medicine in oncology</li>
+                    <li>Conducted literature review on basket trial and adaptive enrichment trial designs</li>
+                    </ul>
                 <li> <b>Brightech International, LLC/CIMS Global</b> <i>SAS and R Programmer</i> </li>
+                <ul>
+                    <li>Develped simulations for generalized adaptive trial design using R</li>
+                    <li>Pioneered the statistical support and implementation for a software program in
+                         dynamic monitoring of on-going clinical trials using R, which was later applied 
+                         in the Chinese Clinical Trials of Remdesivir in treating patients with COVID-19</li>
+                    <li>Participated in the study of pomalidomide(Pomalyst) by visualizing clinical trial data,
+                        which is the first new FDA approved Kaposi sarcoma treatment in 20 years
+                    </li>
+                    </ul>
                 <li> <b>Genentech</b> <i>Statistical Programming Analysis - Data Analytics Intern</i> </li>
                 <ul>
                     <li>Explored possibly early endpoint to predict asthma exacerbations using data from 
-                        two identical,randomized, multicenter, placebo-controlled Phase III studies</li>>
+                        two identical,randomized, multicenter, placebo-controlled Phase III studies</li>
                     <li>The main goal was to evaulate new options to establish Phase II proof of concept and 
-                        impact on overall clinical development timelines</li>>
-                    </ul>>
+                        impact on overall clinical development timelines</li>
+                    </ul>
             </ul>
 
             <h3>Relevant Courses</h3>
