--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
              I then went on to earn my Masters in Biostatistics at Columbia University, Mailman School of Public Health.
              
              <p>
-                 After obtaining my Masters, I worked as a biostatistician and programmer at a clinical research organization where I was responsible for clinical trial data analysis and also developed software for dynamic monitoring.
+                 After obtaining my Masters, I worked as a programmer at a clinical research organization where I was responsible for clinical trial data analysis and also developed software for dynamic monitoring.
              </p>
              
              <p>In my spare time, I might be found catching up on anime, playing with my dog Toast, reading, or rapping.</p>
