--- a/research.html
+++ b/research.html
@@ -73,7 +73,7 @@
             <h3>Presentations</h3>
             <ul>
                 <li><b>Tu Y</b>, <i>Biomarker Clinical Trial Design for Cancer Therapy</i>, Seminar in Biostatistics and Epidemiology.
-                Keck School of Medicine of USC. Online. 2020</li>
+                Keck School of Medicine, USC. Online. 2020</li>
                 <li><b>Tu Y</b>, <i>Efficiency with Trade-Offs and Crossover Design</i>, Seminar in Biostatistics and Programming.
                 Brightech International LLC. Somerset, NJ. 2019</li>
                 <li><b>Tu Y</b>, <i>Overview of Clinical Trial</i>, Seminar in Biostatistics and Programming.
