--- a/research.html
+++ b/research.html
@@ -58,8 +58,8 @@
             <h3>Research Projects</h3>
             <ul>
                 <li> <b>Bayesian Biomarker-Adaptive Clinical Trial Design Algorithms for Personalized Medicine in Oncology</b> </li>
-                <li> <b>Generalized Adaptive Design for Clinical Trial</li>
-                <li> <b>Exploring Early Endpoints for Predicting Asthma Exacerbations</li>
+                <li> <b>Generalized Adaptive Design for Clinical Trial </b></li>
+                <li> <b>Exploring Early Endpoints for Predicting Asthma Exacerbations </b></li>
                 
             </ul>
 
